# ethical-trust-cognitive-modeling

./: .gitignore  README.md  pyproject.toml  structure.ini
src/ethical_trust_cognitive_modeling/agents/: constants.py  emotional_agent.py
src/ethical_trust_cognitive_modeling/plots/: plotting.py
src/ethical_trust_cognitive_modeling/simulation/: simulation.py  utils.py
